<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Movies</string>


    <!-- - - - - - - - - - -  -->
    <!-- MOVIE POSTER VALUES  -->
    <!-- - - - - - - - - - -  -->
    <string name="movie_poster_content_description">Movie Image</string>
    <string name="error_loading_message">Error: Images did not load correctly.</string>


    <!-- - - - - - - - - - -  -->
    <!-- MOVIE DETAILS VALUES -->
    <!-- - - - - - - - - - -  -->
    <string name="movie_title_label">Title:</string>
    <string name="movie_release_date_label">Release Date:</string>
    <string name="movie_rating_label">Rating:</string>
    <string name="movie_description_label">Description:</string>

    <string name="settings_activity">Settings</string>


    <string name="action_by_top_rated">Sort By Rating</string>
    <string name="action_by_most_popular">Sort By Popularity</string>
    <string name="action_refresh">Refresh</string>

    <!--<string name="movie_db_key">1234567890</string>-->

    <string name="content_description_title">Movie Title</string>


    <string name="trailer_header">Trailers</string>
    <string name="no_trailers">This movie does not have any trailers.</string>
    <string name="content_description_trailer">Movie Trailer</string>

    <string name="review_header">Reviews</string>
    <string name="no_reviews">This movie does not have any reviews.</string>
    <string name="review_author">Example Author</string>
    <string name="review_content">Example of the review content.</string>


    <string name="db_insert_confirmation">Favorite saved successfully.</string>
    <string name="db_insert_error">Database insert failed!</string>
    <string name="db_delete_confirmation">Favorite was removed.</string>
    <string name="db_delete_error">Database delete failed!</string>

    <string name="favorite_header">Favorite Movies</string>

</resources>
