<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cloud.mockingbird.movietesting.DetailActivity">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/content_description_title"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccentVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_movie_poster_image"
            android:layout_width="178dp"
            android:layout_height="225dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccentVariant"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
            app:srcCompat="@drawable/ic_heart_outline" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title">

            <TextView
                android:id="@+id/tv_movie_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_release_date_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_movie_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_movie_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_rating_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_movie_vote_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="164dp"
            android:layout_height="301dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_image"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_description_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

            <TextView
                android:id="@+id/tv_trailer_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/trailer_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccentVariant"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_trailers"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/tv_review_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_trailer_header" />

            <TextView
                android:id="@+id/tv_review_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/review_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccentVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_movie_trailers" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_review_header" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>